requirements wtih jupyter etc

--- a/requirements.txt
+++ b/requirements.txt
@@ -2,3 +2,41 @@ numpy
 pandas
 opencv-python #image manipulation
 Pillow  #image manipulation
+ipython
+ipython-genutils
+ipywidgets
+json5
+jsonschema
+jupyter-contrib-core
+jupyter-contrib-nbextensions
+jupyter-highlight-selected-word
+jupyter-latex-envs
+jupyter-nbextensions-configurator
+jupyter-resource-usage
+jupyter-server
+jupyter-server-mathjax
+jupyter_client
+jupyter_core
+jupyterlab
+jupyterlab-pygments
+jupyterlab-widgets
+jupyterlab_server
+kaggle
+keras
+Keras-Preprocessing
+Markdown
+matplotlib
+matplotlib-inline
+notebook
+notebook_shim
+numpy
+pandas
+pandas-gbq
+Pillow
+plotly
+scikit-image
+scikit-learn
+scipy
+seaborn
+statsmodels
+streamlit
